# ShrinkURL

./: README.md
backend/: .gitignore  manage.py  pyproject.toml
backend/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/api/utils/: base62.py  range_manager.py
backend/redirector/: urls.py  views.py
backend/shrinkURL/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: next.config.mjs  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: features.tsx  hero.tsx  recent-activity.tsx  result-card.tsx
